# ango

./: .gitignore  Cargo.toml  Makefile  README.md  clear.sh  run.sh
scripts/: bench.go  run.sh
src/: angofile.rs  commands.rs  heads.rs  main.rs
src/commands/: add.rs
