[package]
name = "ango"
version = "0.1.0"
authors = ["Maxim Kosterov <maxim.kosterov@gmail.com>"]
edition = "2018"

[dependencies]
tokio = {version = "1.8.1", features = ["full"]}
anyhow = "1.0.42"
serde_yaml = "0.8.17"
blake3 = {version = "1.0.0", features = ["std", "rayon"]}
data-encoding = "2.3.2"
clap = "2.33.3"