[package]
name = "ango"
version = "0.1.0"
authors = ["Maxim Kosterov <maxim.kosterov@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.42"
serde = "1.0.127"
serde_derive = "1.0.127"
toml = "0.5.8"
blake3 = {version = "1.0.0", features = ["std", "rayon"]}
data-encoding = "2.3.2"
clap = "2.33.3"
rayon = "*"